--- a/base/package.json
+++ b/base/package.json
@@ -11,6 +11,9 @@
     "babel-loader": "7",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
+    "react": "^16.9.0",
     "webpack": "^4.40.0",
     "webpack-dev-server": "^3.8.0"
   },
