--- a/react_base/package.json
+++ b/react_base/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4"
   }
 }
