--- a/react-complete-guide/package.json
+++ b/react-complete-guide/package.json
@@ -6,7 +6,8 @@
     "lodash": "^4.17.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "webpack-dev-server": "^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
