--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -15,6 +15,7 @@
     "@types/react-transition-group": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
