--- a/redux-toolkit/package.json
+++ b/redux-toolkit/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "babel-jest": "^27.0.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
